--- a/app/src/main/res/menu/ddu_chooser_dir_context_menu.xml
+++ b/app/src/main/res/menu/ddu_chooser_dir_context_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/dir_delete" android:title="@string/dir_delete"/>
+    <!-- Android >= 5.0 -->
     <item android:id="@+id/dir_export" android:title="@string/dir_export"/>
 </menu>
