--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="small_text_size">12sp</dimen>
+    <dimen name="inf_hspace">1000dp</dimen>
 </resources>
