--- a/app/src/main/res/layout/activity_dduchooser.xml
+++ b/app/src/main/res/layout/activity_dduchooser.xml
@@ -12,7 +12,7 @@
                 android:padding="8dp"
         />
         <View style="@style/dividerHorizontal"/>
-        <com.pierbezuhoff.dodeca.AutofitGridRecyclerView
+        <com.pierbezuhoff.dodeca.ui.AutofitGridRecyclerView
                 android:id="@+id/ddu_recycler_view"
                 android:scrollbars="vertical"
                 android:layout_width="match_parent"
