--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".MainActivity"
+        tools:context=".ui.MainActivity"
 >
 
-    <com.pierbezuhoff.dodeca.DodecaView
+    <com.pierbezuhoff.dodeca.ui.DodecaView
             android:id="@+id/dodecaView"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -51,7 +51,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity"
+            tools:context=".ui.MainActivity"
             app:layout_constraintBottom_toBottomOf="parent"
     >
 
