--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="translucentLightBackground">#a0ffffff</color>
     <color name="lightGray">#00AFADAD</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
