--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".ui.MainActivity"
->
-
-    <com.pierbezuhoff.dodeca.ui.DodecaView
-            android:id="@+id/dodecaView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-    />
-
-    <LinearLayout
-            android:id="@+id/stat"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="top|end"
-            android:background="@color/translucentLightBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-    >
-        <TextView
-                android:text="@string/stat_n_updates_initial"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/n_updates"
-        />
-        <TextView
-                android:text="@string/stat_20_updates_per_initial"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/updates_20"
-        />
-    </LinearLayout>
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="model" type="com.pierbezuhoff.dodeca.models.MainViewModel"/>
+        <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.models.DodecaViewModel"/>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context=".ui.MainActivity"
-            app:layout_constraintBottom_toBottomOf="parent"
     >
 
-        <androidx.appcompat.widget.Toolbar
-                android:id="@+id/bar"
+        <com.pierbezuhoff.dodeca.ui.DodecaView
+                android:id="@+id/dodecaView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:mainModel="@{model}"
+                app:model="@{dodecaViewModel}"
+        />
+
+        <LinearLayout
+                android:id="@+id/stat"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="top|end"
+                android:background="@color/translucentLightBackground"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_gravity="bottom"
-                app:buttonGravity="bottom"
-                android:background="@color/toolbarColor"
-                app:contentInsetLeft="0dp"
-                app:contentInsetRight="0dp"
-                app:contentInsetStart="0dp"
-                app:contentInsetStartWithNavigation="0dp"
-                app:contentInsetEnd="0dp"
-                app:contentInsetEndWithActions="0dp"
         >
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
+            <TextView
+                    android:text="@string/stat_n_updates_initial"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/n_updates"
+            />
+            <TextView
+                    android:text="@string/stat_20_updates_per_initial"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/updates_20"
+            />
+        </LinearLayout>
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".ui.MainActivity"
+                app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+            <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/bar"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="bottom"
+                    app:buttonGravity="bottom"
+                    android:background="@color/toolbarColor"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetRight="0dp"
+                    app:contentInsetStart="0dp"
+                    app:contentInsetStartWithNavigation="0dp"
+                    app:contentInsetEnd="0dp"
+                    app:contentInsetEndWithActions="0dp"
+                    app:showWhen="@{model.bottomBarShown}"
             >
-                <include layout="@layout/toolbar1"/>
-                <View style="@style/dividerHorizontal"/>
-                <include layout="@layout/toolbar2"/>
-            </LinearLayout>
-        </androidx.appcompat.widget.Toolbar>
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                >
+                    <include layout="@layout/toolbar1"/>
+                    <View style="@style/dividerHorizontal"/>
+                    <include layout="@layout/toolbar2"/>
+                </LinearLayout>
+            </androidx.appcompat.widget.Toolbar>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
