--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -1,71 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar1"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-    <ImageButton
-            android:id="@+id/help_button"
-            android:contentDescription="@string/help_button_title"
-            android:src="@drawable/ic_help"
-            app:backgroundTint="@color/toolbarColor"
-            android:padding="8dp"
+>
+    <data>
+        <variable name="model" type="com.pierbezuhoff.dodeca.models.MainViewModel"/>
+    </data>
+    <LinearLayout
+            android:id="@+id/toolbar2"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-    />
-    <ImageButton
-            android:id="@+id/load_button"
-            android:contentDescription="@string/load_button_title"
-            android:src="@drawable/ic_open_file"
-            app:backgroundTint="@color/toolbarColor"
-            android:padding="8dp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    />
-    <ImageButton
-            android:id="@+id/save_button"
-            android:contentDescription="@string/save_button_title"
-            android:src="@drawable/ic_save_file"
-            app:backgroundTint="@color/toolbarColor"
-            android:padding="8dp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    />
-    <!-- maybe: use ToggleButton -->
-    <ImageButton
-            android:id="@+id/play_button"
-            android:contentDescription="@string/play_button_title"
-            android:src="@drawable/ic_play"
-            app:backgroundTint="@color/toolbarColor"
-            android:padding="8dp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    />
-    <ImageButton
-            android:id="@+id/next_step_button"
-            android:contentDescription="@string/one_step_button_title"
-            android:src="@drawable/ic_next_step"
-            app:backgroundTint="@color/toolbarColor"
-            android:padding="8dp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    />
-    <ImageButton
-            android:id="@+id/settings_button"
-            android:contentDescription="@string/settings_button_title"
-            android:src="@drawable/ic_settings"
-            app:backgroundTint="@color/toolbarColor"
-            android:padding="8dp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    />
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:gravity="center">
+        <ImageButton
+                android:id="@+id/help_button"
+                android:src="@drawable/ic_help"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                app:description="@{@string/help_button_title}"
+        />
+        <ImageButton
+                android:id="@+id/load_button"
+                android:src="@drawable/ic_open_file"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:description="@{@string/load_button_title}"
+        />
+        <ImageButton
+                android:id="@+id/save_button"
+                android:src="@drawable/ic_save_file"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:description="@{@string/save_button_title}"
+        />
+        <ImageButton
+                android:id="@+id/play_button"
+                android:src="@drawable/ic_play"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:description="@{@string/play_button_title}"
+        />
+        <ImageButton
+                android:id="@+id/next_step_button"
+                android:src="@drawable/ic_next_step"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:description="@{@string/one_step_button_title}"
+        />
+        <ImageButton
+                android:id="@+id/settings_button"
+                android:src="@drawable/ic_settings"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:description="@{@string/settings_button_title}"
+        />
+    </LinearLayout>
+</layout>
