--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,18 +38,19 @@
                 android:background="@color/translucentLightBackground"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:showWhen="@{model.showStat}"
         >
             <TextView
-                    android:text="@string/stat_n_updates_initial"
+                    android:text="@{@string/stat_n_updates_text(dodecaViewModel.nUpdates)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/n_updates"
             />
             <TextView
-                    android:text="@string/stat_20_updates_per_initial"
+                    android:text="@{dodecaViewModel.dTime == null ? @string/stat_x_updates_per_initial : @string/stat_x_updates_per_text(dodecaViewModel.statTimeDelta, dodecaViewModel.dTime)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/updates_20"
+                    android:id="@+id/updates_x"
             />
         </LinearLayout>
         <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -79,6 +80,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                 >
+                    <!-- TODO: pass models to toolbars -->
                     <include layout="@layout/toolbar1"/>
                     <View style="@style/dividerHorizontal"/>
                     <include layout="@layout/toolbar2"/>
