--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -4,6 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
 >
     <data>
+        <variable name="model" type="com.pierbezuhoff.dodeca.models.MainViewModel"/>
         <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.models.DodecaViewModel"/>
     </data>
     <LinearLayout
