--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -53,8 +53,8 @@
                 android:layout_height="match_parent"
                 app:description="@{@string/play_button_title}"
                 app:switchImageWhen="@{dodecaViewModel.updating}"
-                app:trueDrawable="@{@drawable/ic_play}"
-                app:falseDrawable="@{@drawable/ic_pause}"
+                app:trueDrawable="@{@drawable/ic_pause}"
+                app:falseDrawable="@{@drawable/ic_play}"
         />
         <ImageButton
                 android:id="@+id/next_step_button"
