--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -41,10 +41,9 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:selectedItemPosition="@={model.shapeOrdinal}"
-                android:onNothingSelected="@{(view) -> model.showBottomBar()}"
                 app:description="@{@string/shape_spinner_title}"
         />
+        <!--android:selectedItemPosition="@={model.shapeOrdinal}"-->
         <ImageButton
                 android:id="@+id/clear_button"
                 android:src="@drawable/ic_clear"
