--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -38,6 +38,7 @@
         <item>20</item>
         <item>30</item>
         <item>50</item>
+        <item>100</item>
     </string-array>
 
     <string-array name="preview_sizes">
