--- a/app/src/main/res/layout/choose_color_row.xml
+++ b/app/src/main/res/layout/choose_color_row.xml
@@ -1,113 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
->
-<!-- maybe: use ChipGroup instead of RecyclerView -->
-    <CheckBox
-            android:id="@+id/circle_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-    />
-    <ToggleButton
-            android:id="@+id/circle_visibility"
-            android:background="@color/lightGray"
-            android:button="@drawable/circle_visibility"
-            android:checked="true"
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:textOn=""
-            android:textOff=""
-            android:contentDescription="@string/circle_visibility_description"
-            app:layout_constraintStart_toEndOf="@+id/circle_checkbox"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-    />
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/circle_layout"
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/circle_layout_description"
-            tools:layout_editor_absoluteY="0dp"
-            app:layout_constraintStart_toEndOf="@+id/circle_visibility"
-            android:layout_marginStart="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
     >
-        <ImageView
-                android:id="@+id/circle_image"
-                android:src="@drawable/circle_image"
-                android:contentDescription="@string/circle_image_description"
-                android:padding="8dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-        />
-        <!-- ISSUE: on small phones overlapping between circle_name and expand_group -->
-        <!-- MAYBE: customize textSize -->
-        <TextView
-                android:id="@+id/circle_name"
+        <!-- maybe: use ChipGroup instead of RecyclerView -->
+        <CheckBox
+                android:id="@+id/circle_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/circle_image"
+        />
+        <ToggleButton
+                android:id="@+id/circle_visibility"
+                android:background="@color/lightGray"
+                android:button="@drawable/circle_visibility"
+                android:checked="true"
+                android:layout_width="24dp"
+                android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                android:textOn=""
+                android:textOff=""
+                android:contentDescription="@{@string/circle_visibility_description}"
+                app:layout_constraintStart_toEndOf="@+id/circle_checkbox"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/circle_layout"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:contentDescription="@{@string/circle_layout_description}"
+                tools:layout_editor_absoluteY="0dp"
+                app:layout_constraintStart_toEndOf="@+id/circle_visibility"
                 android:layout_marginStart="16dp"
-                android:text="@string/circle_name_initial_text"
-                android:textSize="@dimen/small_text_size"
-                android:ellipsize="end"
+        >
+            <ImageView
+                    android:id="@+id/circle_image"
+                    android:src="@drawable/circle_image"
+                    android:contentDescription="@{@string/circle_image_description}"
+                    android:padding="8dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+            />
+            <!-- ISSUE: on small phones overlapping between circle_name and expand_group -->
+            <!-- MAYBE: customize textSize -->
+            <TextView
+                    android:id="@+id/circle_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/circle_image"
+                    android:layout_marginStart="16dp"
+                    android:text="@string/circle_name_initial_text"
+                    android:textSize="@dimen/small_text_size"
+                    android:ellipsize="end"
+            />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <Space
+                android:layout_width="@dimen/inf_hspace"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/circle_layout"
+                app:layout_constraintEnd_toStartOf="@id/expand_group"
+        />
+        <ToggleButton
+                android:id="@+id/expand_group"
+                android:background="@color/lightGray"
+                android:button="@drawable/expand_group"
+                android:checked="false"
+                android:layout_width="24dp"
+                android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                android:textOn=""
+                android:textOff=""
+                android:contentDescription="@{@string/expand_group_description}"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <Space
-            android:layout_width="@dimen/inf_hspace"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/circle_layout"
-            app:layout_constraintEnd_toStartOf="@id/expand_group"
-    />
-    <ToggleButton
-            android:id="@+id/expand_group"
-            android:background="@color/lightGray"
-            android:button="@drawable/expand_group"
-            android:checked="false"
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:textOn=""
-            android:textOff=""
-            android:contentDescription="@string/expand_group_description"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
