--- a/app/src/main/res/layout/dir_row.xml
+++ b/app/src/main/res/layout/dir_row.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
->
-    <ImageView
-            android:layout_width="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_folder"
-            android:contentDescription="@string/folder_icon_description"
-            android:padding="8dp"
-    />
-    <TextView
-            android:id="@+id/dir_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dir_name_initial_text"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
-            android:padding="8dp"
-    />
-</LinearLayout>
+    >
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_folder"
+                android:contentDescription="@{@string/folder_icon_description}"
+                android:padding="8dp"
+        />
+        <TextView
+                android:id="@+id/dir_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dir_name_initial_text"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:padding="8dp"
+        />
+    </LinearLayout>
+</layout>
