--- a/app/src/main/res/layout/edit_circle.xml
+++ b/app/src/main/res/layout/edit_circle.xml
@@ -1,55 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
->
-    <Switch
-            android:id="@+id/circle_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/circle_show_description"
-            android:layout_margin="8dp"
-            android:padding="8dp"
-    />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+    </data>
     <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
     >
-        <ImageButton
-                android:id="@+id/circle_color"
-                android:src="@drawable/ic_filled_circle_40dp"
-                android:contentDescription="@string/edit_circle_color_description"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="8dp"
-        />
         <Switch
-                android:id="@+id/circle_fill"
-                android:text="@string/edit_circle_fill_description"
-                android:textSize="@dimen/small_text_size"
+                android:id="@+id/circle_show"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/circle_show_description"
                 android:layout_margin="8dp"
+                android:padding="8dp"
         />
-        <ImageButton
-                android:id="@+id/circle_border_color"
-                android:src="@drawable/ic_circle_40dp"
-                android:contentDescription="@string/edit_circle_border_color_description"
-                android:layout_width="wrap_content"
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp"
-        />
-        <Switch
-                android:id="@+id/circle_has_border_color"
-                android:text="@string/edit_circle_has_border_color_text"
-                android:textSize="@dimen/small_text_size"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="8dp"
-        />
+        >
+            <ImageButton
+                    android:id="@+id/circle_color"
+                    android:src="@drawable/ic_filled_circle_40dp"
+                    android:contentDescription="@{@string/edit_circle_color_description}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+            />
+            <Switch
+                    android:id="@+id/circle_fill"
+                    android:text="@string/edit_circle_fill_description"
+                    android:textSize="@dimen/small_text_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+            />
+            <ImageButton
+                    android:id="@+id/circle_border_color"
+                    android:src="@drawable/ic_circle_40dp"
+                    android:contentDescription="@{@string/edit_circle_border_color_description}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+            />
+            <Switch
+                    android:id="@+id/circle_has_border_color"
+                    android:text="@string/edit_circle_has_border_color_text"
+                    android:textSize="@dimen/small_text_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+            />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
