--- a/app/src/main/res/layout/shape_spinner_row.xml
+++ b/app/src/main/res/layout/shape_spinner_row.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
->
-    <ImageView
-            android:id="@+id/shape_spinner_image"
-            android:contentDescription="@string/shape_image_title"
-            android:padding="8dp"
-            android:layout_width="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+    </data>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-    />
-</LinearLayout>
+    >
+        <ImageView
+                android:id="@+id/shape_spinner_image"
+                android:contentDescription="@{@string/shape_image_title}"
+                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+        />
+    </LinearLayout>
+</layout>
