--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
-                app:description="@{@string/help_button_title}"
+                android:contentDescription="@{@string/help_button_title}"
         />
         <ImageButton
                 android:id="@+id/load_button"
@@ -31,7 +31,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/load_button_title}"
+                android:contentDescription="@{@string/load_button_title}"
         />
         <ImageButton
                 android:id="@+id/save_button"
@@ -41,7 +41,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/save_button_title}"
+                android:contentDescription="@{@string/save_button_title}"
         />
         <ImageButton
                 android:id="@+id/play_button"
@@ -51,7 +51,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/play_button_title}"
+                android:contentDescription="@{@string/play_button_title}"
                 app:switchImageWhen="@{safeUnbox(dodecaViewModel.updating)}"
                 app:trueDrawable="@{@drawable/ic_pause}"
                 app:falseDrawable="@{@drawable/ic_play}"
@@ -64,7 +64,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/one_step_button_title}"
+                android:contentDescription="@{@string/one_step_button_title}"
         />
         <ImageButton
                 android:id="@+id/settings_button"
@@ -74,7 +74,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/settings_button_title}"
+                android:contentDescription="@{@string/settings_button_title}"
         />
     </LinearLayout>
 </layout>
