--- a/app/src/main/res/layout/toolbar_edit.xml
+++ b/app/src/main/res/layout/toolbar_edit.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
-                app:description="@{@string/help_button_title}"
+                android:contentDescription="@{@string/help_button_title}"
         />
         <ImageButton
                 android:id="@+id/load_button"
@@ -29,7 +29,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/load_button_title}"
+                android:contentDescription="@{@string/load_button_title}"
         />
         <ImageButton
                 android:id="@+id/save_button"
@@ -39,7 +39,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/save_button_title}"
+                android:contentDescription="@{@string/save_button_title}"
         />
         <ImageButton
                 android:id="@+id/play_button"
@@ -49,7 +49,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/play_button_title}"
+                android:contentDescription="@{@string/play_button_title}"
                 app:tintEnabled="@{safeUnbox(model.playing)}"
         />
         <ImageButton
@@ -60,7 +60,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/draw_circles_button_title}"
+                android:contentDescription="@{@string/draw_circles_button_title}"
                 app:tintEnabled="@{safeUnbox(model.drawCirclesMode)}"
         />
         <ImageButton
@@ -71,7 +71,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:description="@{@string/settings_button_title}"
+                android:contentDescription="@{@string/settings_button_title}"
         />
 
     </LinearLayout>
