--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,17 @@
         xmlns:bind="http://schemas.android.com/apk/res-auto"
 >
     <data>
-        <variable name="model" type="com.pierbezuhoff.dodeca.models.MainViewModel"/>
-        <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.models.DodecaViewModel"/>
+        <variable name="model" type="com.pierbezuhoff.dodeca.ui.dodeca.MainViewModel"/>
+        <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.ui.dodeca.DodecaViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context=".ui.MainActivity"
+            tools:context=".ui.dodeca.MainActivity"
     >
 
-        <com.pierbezuhoff.dodeca.ui.DodecaView
+        <com.pierbezuhoff.dodeca.ui.dodeca.DodecaView
                 android:id="@+id/dodecaView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -58,7 +58,7 @@
         <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".ui.MainActivity"
+                tools:context=".ui.dodeca.MainActivity"
                 app:layout_constraintBottom_toBottomOf="parent"
         >
 
